--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>2D Gaussian Splatting</title>
+    <title>MVG-Splatting</title>
 
     <meta name="description"
-        content="2D Gaussian Splatting for Geometrically Accurate Radiance Fields">
+        content="Multi-View Guided Gaussian Splatting with Adaptive Quantile-Based Geometric Consistency Densification">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--FACEBOOK-->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://surfsplatting.github.io" />
-    <meta property='og:video' content="https://www.youtube.com/watch?v=oaHCtB6yiKU" />
+    <meta property="og:url" content="https://mvgsplatting.github.io" />
+<!--     <meta property='og:video' content="https://www.youtube.com/watch?v=oaHCtB6yiKU" /> -->
     <meta property="og:title" content="2D Gaussian Splatting" />
     <meta property="og:description"
-        content="2D Gaussian Splatting for Geometrically Accurate Radiance Fields" />
+        content="Multi-View Guided Gaussian Splatting with Adaptive Quantile-Based Geometric Consistency Densification" />
 
     <!--TWITTER-->
     <meta name="twitter:card" content="player" />
@@ -68,29 +68,27 @@
     <div class="container" id="main">
         <div class="row">
             <h2 class="col-md-12 text-center">
-                <b>2DGS</b>: 2D Gaussian Splatting <br> for Geometrically Accurate Radiance Fields </br>
-                <small>
-                    <strong>SIGGRAPH 2024</strong>
-                </small>
+                <b>2DGS</b>: MVG-Splatting: Multi-View Guided Gaussian Splatting with Adaptive Quantile-Based Geometric Consistency Densification </br>
+                
             </h2>
         </div>
         <div class="row">
             <div class="col-md-12 text-center">
                 <ul class="list-inline">
                     <li>
-                        <a href="https://scholar.google.com/citations?user=5da8iKwAAAAJ&hl=en">Binbin Huang</a><sup>1</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;
+                        Zhuoxiao Li</a><sup>1</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;
                     </li>
                     <li>
-                        <a href="https://niujinshuchong.github.io/">Zehao Yu</a><sup>2,3</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;
+                       Yijie Chu</a><sup>2,3</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;
                     </li>
                     <li>
-                        <a href="https://apchenstu.github.io/">Anpei Chen</a><sup>2,3</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;
+                       Yong Yue </a><sup>2,3</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;
                     </li>
                     <li>
-                        <a href="http://www.cvlibs.net/">Andreas Geiger</a><sup>2,3</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;
+                       Xiaohui Zhu</a><sup>2,3</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;
                     </li>
                     <li>
-                        <a href="https://scholar.google.com/citations?user=fe-1v0MAAAAJ&hl=en">Shenghua Gao</a><sup>1</sup>
+                       Shanliang Yao</a><sup>1</sup>
                     </li>
                 </ul>
             </div>
@@ -99,9 +97,9 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <ul class="list-inline">
-                    <li><sup>1</sup>ShanghaiTech University</span>&nbsp;&nbsp;&nbsp;&nbsp;</li>
-                    <li><sup>2</sup>University of Tübingen</span>&nbsp;&nbsp;&nbsp;&nbsp;</li>
-                    <li><sup>3</sup>Tübingen AI Center</span>&nbsp;&nbsp;&nbsp;&nbsp;</li>
+                    <li><sup>1</sup>University of Liverpool</span>&nbsp;&nbsp;&nbsp;&nbsp;</li>
+                    <li><sup>2</sup>Xi'an Jiaotong-Liverpool University</span>&nbsp;&nbsp;&nbsp;&nbsp;</li>
+                    <li><sup>3</sup>ARIES Research Centre, Universidad Antonio de Nebrija</span>&nbsp;&nbsp;&nbsp;&nbsp;</li>
                 </ul>
             </div>
         </div>
