--- a/index.html
+++ b/index.html
@@ -11,22 +11,6 @@
         content="2D Gaussian Splatting for Geometrically Accurate Radiance Fields">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--FACEBOOK-->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://surfsplatting.github.io" />
-    <meta property='og:video' content="https://www.youtube.com/watch?v=oaHCtB6yiKU" />
-    <meta property="og:title" content="2D Gaussian Splatting" />
-    <meta property="og:description"
-        content="2D Gaussian Splatting for Geometrically Accurate Radiance Fields" />
-
-    <!--TWITTER-->
-    <meta name="twitter:card" content="player" />
-    <meta name="twitter:title" content="2D Gaussian Splatting" />
-    <meta name="twitter:description"
-        content="Project page for 2D Gaussian Splatting for Geometrically Accurate Radiance Fields">
-    <meta name="twitter:player" content="https://www.youtube.com/watch?v=oaHCtB6yiKU" />
-    <meta name="twitter:player:width" content="640">
-    <meta name="twitter:player:height" content="360">
 
     <link rel="icon" href="/paint.png">
     <!-- Place favicon.ico in the root directory -->
@@ -51,6 +35,10 @@
     <link rel="stylesheet" href="assets/css/bog/dics.min.css">
     <script src="assets/js/bog/dics.min.js"></script>
     <script src="assets/js/bog/video_comparison.js"></script>
+
+
+    <script src="assets/js/img_compare.js"></script>
+
     <script>
         document.addEventListener('DOMContentLoaded', domReady);
         function domReady() {
@@ -65,7 +53,7 @@
 </head>
 
 <body>
-    <div class="container" id="main">
+    <div class="body-container" id="main">
         <div class="row">
             <h2 class="col-md-12 text-center">
                 <b>2DGS</b>: 2D Gaussian Splatting <br> for Geometrically Accurate Radiance Fields </br>
@@ -186,6 +174,8 @@
 			</div>
         </div>
 
+
+
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h3>
@@ -211,117 +201,169 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-                <h3>
-                    Paper Fast Forward
-                </h3>
-                <div class="aspect-ratio-container">
-                    <video class="responsive-video" controls autoplay loop muted>
-                        <source src="./video/video_10s.mp4" type="video/mp4" />
-                    </video>
-                </div>
-            </div>
-        </div>
 
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-                <h3>
-                    Video
-                </h3>
-                <div class="text-center">
-                    <div style="position:relative;padding-top:56.25%;">
-                        <iframe src="https://www.youtube.com/embed/oaHCtB6yiKU?si=7XSMK6mS6LzU6Kqk" allowfullscreen
-                            style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
+
+        <div class="img-compare-row-wrap">
+            <div class="img-compare-row">
+                <div id="img_comp_11" class="bal-container-small">
+                    <div class="bal-after">
+                        <img src="assets/img/img_compare/cmp1.png">
+                        <div class="bal-afterPosition afterLabel" style="z-index:1;">
+                            Ours
+                        </div>
                     </div>
+
+                    <div class="bal-before" >
+                        <div class="bal-before-inset"  >
+                            <img src="assets/img/img_compare/cmp2.png">
+                            <div class="bal-beforePosition beforeLabel">
+                                2DGS
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bal-handle"  >
+                        <span class=" handle-left-arrow"></span>
+                        <span class="handle-right-arrow"></span>
+                    </div>
+
+                </div>
+                <div id="img_comp_12" class="bal-container-small">
+                    <div class="bal-after">
+                        <img src="assets/img/img_compare/cmp1.png">
+                        <div class="bal-afterPosition afterLabel" style="z-index:1;">
+                            Ours
+                        </div>
+                    </div>
+
+                    <div class="bal-before" >
+                        <div class="bal-before-inset"  >
+                            <img src="assets/img/img_compare/cmp2.png">
+                            <div class="bal-beforePosition beforeLabel">
+                                2DGS
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bal-handle"  >
+                        <span class=" handle-left-arrow"></span>
+                        <span class="handle-right-arrow"></span>
+                    </div>
+
+                </div>
+                <div id="img_comp_13" class="bal-container-small">
+                    <div class="bal-after">
+                        <img src="assets/img/img_compare/cmp1.png">
+                        <div class="bal-afterPosition afterLabel" style="z-index:1;">
+                            Ours
+                        </div>
+                    </div>
+
+                    <div class="bal-before" >
+                        <div class="bal-before-inset"  >
+                            <img src="assets/img/img_compare/cmp2.png">
+                            <div class="bal-beforePosition beforeLabel">
+                                2DGS
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bal-handle"  >
+                        <span class=" handle-left-arrow"></span>
+                        <span class="handle-right-arrow"></span>
+                    </div>
+
                 </div>
             </div>
+            <div class="img-compare-row">
+                <div id="img_comp_21" class="bal-container-small">
+                    <div class="bal-after">
+                        <img src="assets/img/img_compare/cmp1.png">
+                        <div class="bal-afterPosition afterLabel" style="z-index:1;">
+                            Ours
+                        </div>
+                    </div>
+
+                    <div class="bal-before" >
+                        <div class="bal-before-inset"  >
+                            <img src="assets/img/img_compare/cmp2.png">
+                            <div class="bal-beforePosition beforeLabel">
+                                2DGS
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bal-handle"  >
+                        <span class=" handle-left-arrow"></span>
+                        <span class="handle-right-arrow"></span>
+                    </div>
+
+                </div>
+                <div id="img_comp_22" class="bal-container-small">
+                    <div class="bal-after">
+                        <img src="assets/img/img_compare/cmp1.png">
+                        <div class="bal-afterPosition afterLabel" style="z-index:1;">
+                            Ours
+                        </div>
+                    </div>
+
+                    <div class="bal-before" >
+                        <div class="bal-before-inset"  >
+                            <img src="assets/img/img_compare/cmp2.png">
+                            <div class="bal-beforePosition beforeLabel">
+                                2DGS
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bal-handle"  >
+                        <span class=" handle-left-arrow"></span>
+                        <span class="handle-right-arrow"></span>
+                    </div>
+
+                </div>
+                <div id="img_comp_23" class="bal-container-small">
+                    <div class="bal-after">
+                        <img src="assets/img/img_compare/cmp1.png">
+                        <div class="bal-afterPosition afterLabel" style="z-index:1;">
+                            Ours
+                        </div>
+                    </div>
+
+                    <div class="bal-before" >
+                        <div class="bal-before-inset"  >
+                            <img src="assets/img/img_compare/cmp2.png">
+                            <div class="bal-beforePosition beforeLabel">
+                                2DGS
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bal-handle"  >
+                        <span class=" handle-left-arrow"></span>
+                        <span class="handle-right-arrow"></span>
+                    </div>
+
+                </div>
+            </div>
+
+
+            <script>
+                new BeforeAfter({id: '#img_comp_11'});
+                new BeforeAfter({id: '#img_comp_12'});
+                new BeforeAfter({id: '#img_comp_13'});
+
+                new BeforeAfter({id: '#img_comp_21'});
+                new BeforeAfter({id: '#img_comp_22'});
+                new BeforeAfter({id: '#img_comp_23'});
+
+
+            </script>
         </div>
 
-        <div class="row comp-margin">
-            <div class="col-md-8 col-md-offset-2">
-                <h3>
-                    Geometry Reconstruction
-                </h3>
-            </div>
-            <div class="col-md-8 col-md-offset-2">
-                <h4>
-                    3DGS (upper) V.S. 2DGS (below)
-                </h4>
-                <div class="aspect-ratio-container">
-                    <video class="responsive-video" controls autoplay loop muted>
-                        <source src="./video/2dgs_vs_3dgs.mp4" type="video/mp4" />
-                    </video>
-                </div>
-            </div>
-            <div class="col-md-8 col-md-offset-2">
-                <h4>
-                    Our textured mesh
-                </h4>
-                <div class="aspect-ratio-container">
-                    <video class="responsive-video" controls autoplay loop muted>
-                        <source src="./video/colored_mesh.mp4" type="video/mp4" />
-                    </video>
-                </div>
-            </div>
-            <div class="col-md-8 col-md-offset-2">
-                <table width="100%">
-                    <tr>
-                        <td align="left" valign="top" width="50%">
-                            <video id="v2" width="100%" playsinline autoplay loop muted>
-                                <source src="video/comp_barn_mesh.mp4" type="video/mp4" />
-                            </video>
-                        </td>
-                        <td align="left" valign="top" width="50%">
-                            <video id="v3" width="100%" playsinline autoplay loop muted>
-                                <source src="video/comp_ignatius_mesh.mp4" type="video/mp4" />
-                            </video>
-                        </td>
-                    </tr>
-                </table>
-                <table width="100%">
-                    <tr>
-                        <td align="left" valign="top" width="50%">
-                            <video id="v2" width="100%" playsinline autoplay loop muted>
-                                <source src="video/comp_caterpillar_mesh.mp4" type="video/mp4" />
-                            </video>
-                        </td>
-                        <td align="left" valign="top" width="50%">
-                            <video id="v3" width="100%" playsinline autoplay loop muted>
-                                <source src="video/comp_trunk_mesh.mp4" type="video/mp4" />
-                            </video>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-        </div>
 
-        <div class="row comp-margin">
-            <div class="col-md-8 col-md-offset-2">
-                <h3>
-                    Radiance Field Rendering
-                </h3>
-            </div>
-            <div class="col-md-8 col-md-offset-2">
-                <div style="overflow: hidden;">
-                    <video width="100%" playsinline autoplay loop muted style="margin-top: 0%;">
-                        <source src="video/comp_Ignatius.mp4" type="video/mp4" />
-                    </video>
-                </div>
-            </div>
-            <div class="col-md-8 col-md-offset-2">
-                <div style="overflow: hidden;">
-                    <video width="100%" playsinline autoplay loop muted style="margin-top: 0%;">
-                        <source src="video/comp_Caterpillar.mp4" type="video/mp4" />
-                    </video>
-                </div>
-            </div>
 
-            <!-- <div class="col-md-8 col-md-offset-2">
-                <video class="video" id="comp1" loop playsinline autoplay muted src="video/comp_counter.mp4" onplay="resizeAndPlay(this)" style="height: 0px;"></video>
-                <canvas height=0 class="videoMerge" id="comp1Merge"></canvas>
-            </div> -->
-        </div>
+
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h3>
