--- a/index.html
+++ b/index.html
@@ -324,6 +324,172 @@
                 <canvas height=0 class="videoMerge" id="comp1Merge"></canvas>
             </div> -->
         </div>
+
+
+
+        <div class="img-compare-row-wrap">
+            <div class="img-compare-row">
+                <div id="img_comp_11" class="bal-container-small">
+                    <div class="bal-after">
+                        <img src="assets/img/img_compare/cmp1.png">
+                        <div class="bal-afterPosition afterLabel" style="z-index:1;">
+                            Ours
+                        </div>
+                    </div>
+
+                    <div class="bal-before" >
+                        <div class="bal-before-inset"  >
+                            <img src="assets/img/img_compare/cmp2.png">
+                            <div class="bal-beforePosition beforeLabel">
+                                2DGS
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bal-handle"  >
+                        <span class=" handle-left-arrow"></span>
+                        <span class="handle-right-arrow"></span>
+                    </div>
+
+                </div>
+                <div id="img_comp_12" class="bal-container-small">
+                    <div class="bal-after">
+                        <img src="assets/img/img_compare/cmp1.png">
+                        <div class="bal-afterPosition afterLabel" style="z-index:1;">
+                            Ours
+                        </div>
+                    </div>
+
+                    <div class="bal-before" >
+                        <div class="bal-before-inset"  >
+                            <img src="assets/img/img_compare/cmp2.png">
+                            <div class="bal-beforePosition beforeLabel">
+                                2DGS
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bal-handle"  >
+                        <span class=" handle-left-arrow"></span>
+                        <span class="handle-right-arrow"></span>
+                    </div>
+
+                </div>
+                <div id="img_comp_13" class="bal-container-small">
+                    <div class="bal-after">
+                        <img src="assets/img/img_compare/cmp1.png">
+                        <div class="bal-afterPosition afterLabel" style="z-index:1;">
+                            Ours
+                        </div>
+                    </div>
+
+                    <div class="bal-before" >
+                        <div class="bal-before-inset"  >
+                            <img src="assets/img/img_compare/cmp2.png">
+                            <div class="bal-beforePosition beforeLabel">
+                                2DGS
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bal-handle"  >
+                        <span class=" handle-left-arrow"></span>
+                        <span class="handle-right-arrow"></span>
+                    </div>
+
+                </div>
+            </div>
+            <div class="img-compare-row">
+                <div id="img_comp_21" class="bal-container-small">
+                    <div class="bal-after">
+                        <img src="assets/img/img_compare/cmp1.png">
+                        <div class="bal-afterPosition afterLabel" style="z-index:1;">
+                            Ours
+                        </div>
+                    </div>
+
+                    <div class="bal-before" >
+                        <div class="bal-before-inset"  >
+                            <img src="assets/img/img_compare/cmp2.png">
+                            <div class="bal-beforePosition beforeLabel">
+                                2DGS
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bal-handle"  >
+                        <span class=" handle-left-arrow"></span>
+                        <span class="handle-right-arrow"></span>
+                    </div>
+
+                </div>
+                <div id="img_comp_22" class="bal-container-small">
+                    <div class="bal-after">
+                        <img src="assets/img/img_compare/cmp1.png">
+                        <div class="bal-afterPosition afterLabel" style="z-index:1;">
+                            Ours
+                        </div>
+                    </div>
+
+                    <div class="bal-before" >
+                        <div class="bal-before-inset"  >
+                            <img src="assets/img/img_compare/cmp2.png">
+                            <div class="bal-beforePosition beforeLabel">
+                                2DGS
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bal-handle"  >
+                        <span class=" handle-left-arrow"></span>
+                        <span class="handle-right-arrow"></span>
+                    </div>
+
+                </div>
+                <div id="img_comp_23" class="bal-container-small">
+                    <div class="bal-after">
+                        <img src="assets/img/img_compare/cmp1.png">
+                        <div class="bal-afterPosition afterLabel" style="z-index:1;">
+                            Ours
+                        </div>
+                    </div>
+
+                    <div class="bal-before" >
+                        <div class="bal-before-inset"  >
+                            <img src="assets/img/img_compare/cmp2.png">
+                            <div class="bal-beforePosition beforeLabel">
+                                2DGS
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bal-handle"  >
+                        <span class=" handle-left-arrow"></span>
+                        <span class="handle-right-arrow"></span>
+                    </div>
+
+                </div>
+            </div>
+
+
+            <script>
+                new BeforeAfter({id: '#img_comp_11'});
+                new BeforeAfter({id: '#img_comp_12'});
+                new BeforeAfter({id: '#img_comp_13'});
+
+                new BeforeAfter({id: '#img_comp_21'});
+                new BeforeAfter({id: '#img_comp_22'});
+                new BeforeAfter({id: '#img_comp_23'});
+
+
+            </script>
+        </div>
+
+
+
+
+
+
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h3>
