--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <video class="video" width="100%" id="teaser" loop playsinline autoplay muted src="video/teaser.mp4" onplay="resizeAndPlay(this)" style="height: 0px;"></video>
+                <video class="video" width="100%" id="teaser" loop playsinline autoplay muted src="video/render_traj_color.mp4" onplay="resizeAndPlay(this)" style="height: 0px;"></video>
                 <canvas height=0 class="videoMerge" id="teaserMerge"></canvas>
 			</div>
             <div class="col-md-8 col-md-offset-2">
@@ -165,7 +165,7 @@
         </div>
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <video class="video" width="100%" id="teaser2" loop playsinline autoplay muted src="video/teaser2.mp4" onplay="resizeAndPlay(this)" style="height: 0px;"></video>
+                <video class="video" width="100%" id="teaser2" loop playsinline autoplay muted src="video/render_traj_normal.mp4" onplay="resizeAndPlay(this)" style="height: 0px;"></video>
                 <canvas height=0 class="videoMerge" id="teaser2Merge"></canvas>
 			</div>
             <div class="col-md-8 col-md-offset-2">
@@ -175,17 +175,7 @@
                 </p>
 			</div>
         </div>
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-                <video class="video" width="100%" id="teaser3" loop playsinline autoplay muted src="video/teaser3.mp4" onplay="resizeAndPlay(this)" style="height: 0px;"></video>
-               
-			</div>
-            <div class="col-md-8 col-md-offset-2">
-                <p class="text-center">
-                2DGS adopts (a) 2D oriented disks as surface elements and allows (b) high-quality rendering with gaussian splatting. <br>
-                <span style="color:#DF62D3; font-size: 18px;"><b>Use the slider as the "splatter"</b></span>
-                </p>
-			</div>
+        
         </div>
 
         <div class="row">
