--- a/index.html
+++ b/index.html
@@ -124,16 +124,22 @@
         <div class="row">
 
         </div>
-
+<div class="row">
+    <div class="col-md-6">
+        <video class="video" width="100%" id="teaser" loop playsinline autoplay muted src="video/render_traj_color.mp4"></video>
+        <p class="text-center">MVG-Splatting can achieve more fidelity rendering results.</p>
+    </div>
+    <div class="col-md-6">
+        <video class="video" width="100%" id="teaser2" loop playsinline autoplay muted src="video/render_traj_normal.mp4"></video>
+        <p class="text-center">MVG-Splatting can achieve more fidelity rendering results.</p>
+    </div>
+</div>
+        
+        </div>
 
         <div class="row">
     <div class="col-md-6">
         <video class="video" width="100%" id="teaser" loop playsinline autoplay muted src="video/render_traj_color.mp4"></video>
-        onplay="resizeAndPlay(this)" style="height: 0px;"></video>
-                <canvas height=0 class="videoMerge" id="teaserMerge"></canvas>
-			</div>
-            <div class="col-md-8 col-md-offset-2">
-                <p class="text-center">
         <p class="text-center">MVG-Splatting can achieve more fidelity rendering results.</p>
     </div>
     <div class="col-md-6">
