--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     
 
-    <link rel="icon" href="/paint.png">
+    <link rel="icon" href="/logo.png">
     <!-- Place favicon.ico in the root directory -->
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
