--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         
 <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <video class="video" width="100%" id="teaser" loop playsinline autoplay muted src="video/render_traj_color.mp4" onplay="resizeAndPlay(this)" style="height: 0px;"></video>
+                <video class="video" width="100%" id="teaser" loop playsinline autoplay muted src="video/garden.mp4" onplay="resizeAndPlay(this)" style="height: 400px;"></video>
                 <canvas height=0 class="videoMerge" id="teaserMerge"></canvas>
 			</div>
             <div class="col-md-8 col-md-offset-2">
@@ -140,7 +140,7 @@
             
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <video class="video" width="100%" id="teaser2" loop playsinline autoplay muted src="video/render_traj_normal.mp4" onplay="resizeAndPlay(this)" style="height: 0px;"></video>
+                <video class="video" width="100%" id="teaser2" loop playsinline autoplay muted src="video/artsci.mp4" onplay="resizeAndPlay(this)" style="height: 400px;"></video>
                 <canvas height=0 class="videoMerge" id="teaser2Merge"></canvas>
 			</div>
             <div class="col-md-8 col-md-offset-2">
