--- a/index.html
+++ b/index.html
@@ -422,7 +422,68 @@
 
                 </div>
             </div>
-
+	<div class="img-compare-row">
+        <div id="img_comp_31" class="bal-container-small">
+            <div class="bal-after">
+                <img src="assets/img/img_compare/cmp1.png">
+                <div class="bal-afterPosition afterLabel" style="z-index:1;">
+                    Ours
+                </div>
+            </div>
+            <div class="bal-before">
+                <div class="bal-before-inset">
+                    <img src="assets/img/img_compare/cmp2.png">
+                    <div class="bal-beforePosition beforeLabel">
+                        2DGS
+                    </div>
+                </div>
+            </div>
+            <div class="bal-handle">
+                <span class="handle-left-arrow"></span>
+                <span class="handle-right-arrow"></span>
+            </div>
+        </div>
+        <div id="img_comp_32" class="bal-container-small">
+            <div class="bal-after">
+                <img src="assets/img/img_compare/cmp1.png">
+                <div class="bal-afterPosition afterLabel" style="z-index:1;">
+                    Ours
+                </div>
+            </div>
+            <div class="bal-before">
+                <div class="bal-before-inset">
+                    <img src="assets/img/img_compare/cmp2.png">
+                    <div class="bal-beforePosition beforeLabel">
+                        2DGS
+                    </div>
+                </div>
+            </div>
+            <div class="bal-handle">
+                <span class="handle-left-arrow"></span>
+                <span class="handle-right-arrow"></span>
+            </div>
+        </div>
+        <div id="img_comp_33" class="bal-container-small">
+            <div class="bal-after">
+                <img src="assets/img/img_compare/cmp1.png">
+                <div class="bal-afterPosition afterLabel" style="z-index:1;">
+                    Ours
+                </div>
+            </div>
+            <div class="bal-before">
+                <div class="bal-before-inset">
+                    <img src="assets/img/img_compare/cmp2.png">
+                    <div class="bal-beforePosition beforeLabel">
+                        2DGS
+                    </div>
+                </div>
+            </div>
+            <div class="bal-handle">
+                <span class="handle-left-arrow"></span>
+                <span class="handle-right-arrow"></span>
+            </div>
+        </div>
+    </div>
 
 		
 
@@ -435,7 +496,9 @@
                 new BeforeAfter({id: '#img_comp_22'});
                 new BeforeAfter({id: '#img_comp_23'});
 
-		
+		new BeforeAfter({id: '#img_comp_31'});
+    new BeforeAfter({id: '#img_comp_32'});
+    new BeforeAfter({id: '#img_comp_33'});
 
 
             </script>
