--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             <div class="img-compare-row">
                 <div id="img_comp_11" class="bal-container-small">
                     <div class="bal-after">
-                        <img src="assets/img/img_compare/cmp1.png">
+                        <img src="assets/img/img_compare/oursflower.png">
                         <div class="bal-afterPosition afterLabel" style="z-index:1;">
                             Ours
                         </div>
@@ -291,7 +291,7 @@
 
                     <div class="bal-before" >
                         <div class="bal-before-inset"  >
-                            <img src="assets/img/img_compare/cmp2.png">
+                            <img src="assets/img/img_compare/2dgsflower.png">
                             <div class="bal-beforePosition beforeLabel">
                                 2DGS
                             </div>
@@ -306,7 +306,7 @@
                 </div>
                 <div id="img_comp_12" class="bal-container-small">
                     <div class="bal-after">
-                        <img src="assets/img/img_compare/cmp1.png">
+                        <img src="assets/img/img_compare/ourstree.png">
                         <div class="bal-afterPosition afterLabel" style="z-index:1;">
                             Ours
                         </div>
@@ -314,9 +314,9 @@
 
                     <div class="bal-before" >
                         <div class="bal-before-inset"  >
-                            <img src="assets/img/img_compare/cmp2.png">
+                            <img src="assets/img/img_compare/3dgstree.png">
                             <div class="bal-beforePosition beforeLabel">
-                                2DGS
+                                3DGS
                             </div>
                         </div>
                     </div>
@@ -329,7 +329,7 @@
                 </div>
                 <div id="img_comp_13" class="bal-container-small">
                     <div class="bal-after">
-                        <img src="assets/img/img_compare/cmp1.png">
+                        <img src="assets/img/img_compare/oursartscirender.png">
                         <div class="bal-afterPosition afterLabel" style="z-index:1;">
                             Ours
                         </div>
@@ -337,9 +337,9 @@
 
                     <div class="bal-before" >
                         <div class="bal-before-inset"  >
-                            <img src="assets/img/img_compare/cmp2.png">
+                            <img src="assets/img/img_compare/mipsrtsci.png">
                             <div class="bal-beforePosition beforeLabel">
-                                2DGS
+                                Mip-Splatting
                             </div>
                         </div>
                     </div>
@@ -354,7 +354,7 @@
             <div class="img-compare-row">
                 <div id="img_comp_21" class="bal-container-small">
                     <div class="bal-after">
-                        <img src="assets/img/img_compare/cmp1.png">
+                        <img src="assets/img/img_compare/oursgardennormal.png">
                         <div class="bal-afterPosition afterLabel" style="z-index:1;">
                             Ours
                         </div>
@@ -362,7 +362,7 @@
 
                     <div class="bal-before" >
                         <div class="bal-before-inset"  >
-                            <img src="assets/img/img_compare/cmp2.png">
+                            <img src="assets/img/img_compare/2dgsgardennormal.png">
                             <div class="bal-beforePosition beforeLabel">
                                 2DGS
                             </div>
@@ -377,7 +377,7 @@
                 </div>
                 <div id="img_comp_22" class="bal-container-small">
                     <div class="bal-after">
-                        <img src="assets/img/img_compare/cmp1.png">
+                        <img src="assets/img/img_compare/oursbicylclenormal.png">
                         <div class="bal-afterPosition afterLabel" style="z-index:1;">
                             Ours
                         </div>
@@ -385,7 +385,7 @@
 
                     <div class="bal-before" >
                         <div class="bal-before-inset"  >
-                            <img src="assets/img/img_compare/cmp2.png">
+                            <img src="assets/img/img_compare/2dgsbicylclenormal.png">
                             <div class="bal-beforePosition beforeLabel">
                                 2DGS
                             </div>
@@ -400,7 +400,7 @@
                 </div>
                 <div id="img_comp_23" class="bal-container-small">
                     <div class="bal-after">
-                        <img src="assets/img/img_compare/cmp1.png">
+                        <img src="assets/img/img_compare/oursartscinormal.png">
                         <div class="bal-afterPosition afterLabel" style="z-index:1;">
                             Ours
                         </div>
@@ -408,7 +408,7 @@
 
                     <div class="bal-before" >
                         <div class="bal-before-inset"  >
-                            <img src="assets/img/img_compare/cmp2.png">
+                            <img src="assets/img/img_compare/2dgs_artsci_normal.png">
                             <div class="bal-beforePosition beforeLabel">
                                 2DGS
                             </div>
@@ -485,6 +485,68 @@
         </div>
     </div>
 
+		<div class="img-compare-row">
+        <div id="img_comp_41" class="bal-container-small">
+            <div class="bal-after">
+                <img src="assets/img/img_compare/oursbm.png">
+                <div class="bal-afterPosition afterLabel" style="z-index:1;">
+                    Ours
+                </div>
+            </div>
+            <div class="bal-before">
+                <div class="bal-before-inset">
+                    <img src="assets/img/img_compare/2dgs2dgsbm.png">
+                    <div class="bal-beforePosition beforeLabel">
+                        2DGS
+                    </div>
+                </div>
+            </div>
+            <div class="bal-handle">
+                <span class="handle-left-arrow"></span>
+                <span class="handle-right-arrow"></span>
+            </div>
+        </div>
+        <div id="img_comp_42" class="bal-container-small">
+            <div class="bal-after">
+                <img src="assets/img/img_compare/oursgarden.png">
+                <div class="bal-afterPosition afterLabel" style="z-index:1;">
+                    Ours
+                </div>
+            </div>
+            <div class="bal-before">
+                <div class="bal-before-inset">
+                    <img src="assets/img/img_compare/2dgsgarden.png">
+                    <div class="bal-beforePosition beforeLabel">
+                        2DGS
+                    </div>
+                </div>
+            </div>
+            <div class="bal-handle">
+                <span class="handle-left-arrow"></span>
+                <span class="handle-right-arrow"></span>
+            </div>
+        </div>
+        <div id="img_comp_43" class="bal-container-small">
+            <div class="bal-after">
+                <img src="assets/img/img_compare/oursdtu.png">
+                <div class="bal-afterPosition afterLabel" style="z-index:1;">
+                    Ours
+                </div>
+            </div>
+            <div class="bal-before">
+                <div class="bal-before-inset">
+                    <img src="assets/img/img_compare/2dgsdtu.png">
+                    <div class="bal-beforePosition beforeLabel">
+                        2DGS
+                    </div>
+                </div>
+            </div>
+            <div class="bal-handle">
+                <span class="handle-left-arrow"></span>
+                <span class="handle-right-arrow"></span>
+            </div>
+        </div>
+    </div>
 		
 
             <script>
@@ -499,6 +561,10 @@
 		new BeforeAfter({id: '#img_comp_31'});
     new BeforeAfter({id: '#img_comp_32'});
     new BeforeAfter({id: '#img_comp_33'});
+
+		    new BeforeAfter({id: '#img_comp_41'});
+    new BeforeAfter({id: '#img_comp_42'});
+    new BeforeAfter({id: '#img_comp_43'});
 
 
             </script>
