--- a/index.html
+++ b/index.html
@@ -585,12 +585,12 @@
                 </p>
 <pre style="font-size: 12px;">
 @inproceedings{Huang2DGS2024,
-    title={2D Gaussian Splatting for Geometrically Accurate Radiance Fields},
-    author={Huang, Binbin and Yu, Zehao and Chen, Anpei and Geiger, Andreas and Gao, Shenghua},
-    publisher = {Association for Computing Machinery},
-    booktitle = {SIGGRAPH 2024 Conference Papers},
+    title={MVG-Splatting: Multi-View Guided Gaussian Splatting with Adaptive Quantile-Based Geometric Consistency Densification},
+    author={Zhuoxiao, Li},
+    publisher = {Arxiv},
+    booktitle = {},
     year      = {2024},
-    doi       = {10.1145/3641519.3657428}
+    doi       = {}
 }</pre>
             </div>
         </div>
