--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
                     If you want to cite our work, please use:
                 </p>
 <pre style="font-size: 12px;">
-@inproceedings{Huang2DGS2024,
+@inproceedings{LIMVG2024,
     title={MVG-Splatting: Multi-View Guided Gaussian Splatting with Adaptive Quantile-Based Geometric Consistency Densification},
     author={Zhuoxiao, Li},
     publisher = {Arxiv},
