--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="col-md-6 col-md-offset-3 text-center">
                 <ul class="nav nav-pills nav-justified">
                     <li>
-                        <a href="">
+                        <a href="http://arxiv.org/abs/2407.11840">
                             <img src="assets/paper/paper.png"  height="60px" />
                                 <h4><strong>Paper</strong></h4>
                         </a>
