--- a/index.html
+++ b/index.html
@@ -584,13 +584,14 @@
                     If you want to cite our work, please use:
                 </p>
 <pre style="font-size: 12px;">
-@inproceedings{LIMVG2024,
-    title={MVG-Splatting: Multi-View Guided Gaussian Splatting with Adaptive Quantile-Based Geometric Consistency Densification},
-    author={Zhuoxiao, Li},
-    publisher = {Arxiv},
-    booktitle = {},
-    year      = {2024},
-    doi       = {}
+@misc{li2024mvgsplatting,
+      title={MVG-Splatting: Multi-View Guided Gaussian Splatting with Adaptive Quantile-Based Geometric Consistency Densification}, 
+      author={Zhuoxiao Li and Shanliang Yao and Yijie Chu and Angel F. Garcia-Fernandez and Yong Yue and Eng Gee Lim and Xiaohui Zhu},
+      year={2024},
+      eprint={2407.11840},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2407.11840}, 
 }</pre>
             </div>
         </div>
