--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <ul class="list-inline">
-                    <li>
+<!--                     <li>
                         Zhuoxiao Li</a><sup>1</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;
                     </li>
                     <li>
@@ -77,7 +77,7 @@
                        Xiaohui Zhu</a><sup>2,3</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;
                     </li>
                     <li>
-                       Shanliang Yao</a><sup>1</sup>
+                       Shanliang Yao</a><sup>1</sup> -->
                     </li>
                 </ul>
             </div>
@@ -86,9 +86,9 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <ul class="list-inline">
-                    <li><sup>1</sup>University of Liverpool</span>&nbsp;&nbsp;&nbsp;&nbsp;</li>
+<!--                     <li><sup>1</sup>University of Liverpool</span>&nbsp;&nbsp;&nbsp;&nbsp;</li>
                     <li><sup>2</sup>Xi'an Jiaotong-Liverpool University</span>&nbsp;&nbsp;&nbsp;&nbsp;</li>
-                    <li><sup>3</sup>ARIES Research Centre, Universidad Antonio de Nebrija</span>&nbsp;&nbsp;&nbsp;&nbsp;</li>
+                    <li><sup>3</sup>ARIES Research Centre, Universidad Antonio de Nebrija</span>&nbsp;&nbsp;&nbsp;&nbsp;</li> -->
                 </ul>
             </div>
         </div>
